; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_vsf.c_destroy.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_vsf.c_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i64 }
%struct.r_bin_vsf_obj = type { %struct.r_bin_vsf_obj* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*)* @destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @destroy(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca %struct.r_bin_vsf_obj*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %4 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 0
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = inttoptr i64 %8 to %struct.r_bin_vsf_obj*
  store %struct.r_bin_vsf_obj* %9, %struct.r_bin_vsf_obj** %3, align 8
  %10 = load %struct.r_bin_vsf_obj*, %struct.r_bin_vsf_obj** %3, align 8
  %11 = getelementptr inbounds %struct.r_bin_vsf_obj, %struct.r_bin_vsf_obj* %10, i32 0, i32 0
  %12 = load %struct.r_bin_vsf_obj*, %struct.r_bin_vsf_obj** %11, align 8
  %13 = call i32 @free(%struct.r_bin_vsf_obj* %12)
  %14 = load %struct.r_bin_vsf_obj*, %struct.r_bin_vsf_obj** %3, align 8
  %15 = call i32 @free(%struct.r_bin_vsf_obj* %14)
  ret void
}

declare dso_local i32 @free(%struct.r_bin_vsf_obj*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
